can write files to json

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "program": "${workspaceFolder}\\crawler2.0.js"
+            "program": "${workspaceFolder}\\crawler.js"
         }
     ]
 }
